Bug 3655, intermediate checkin. Now using XUL instead of HTML for Bocardo-based screen output (which is currently all of it). Many useful things broken, *but* we will be able to do dynamic resizing again soon, and from there we'll be able to go on to Baroco.

--- a/gnusto.css
+++ b/gnusto.css
@@ -6,8 +6,9 @@ window {
 	border: 0;
 }
 
-description#canary {
+description {
 	font-family: monospace;
+	background-color: #FFFF33; /* for testing */
 }
 
 body {
