Bug 3655, intermediate checkin. Barbara and Bocardo are stacked.

--- a/gnusto.css
+++ b/gnusto.css
@@ -1,5 +1,14 @@
 /* CSS for Gnusto */
 
+body {
+	font-family: serif;
+	font-size: 14pt;
+}
+
+vbox#pad {
+	background-color: #337733;
+}
+
 window {
         font-family: "clean", sans-serif;
 	font-size: 15px;
@@ -8,8 +17,44 @@ window {
 
 description {
 	font-family: monospace;
-	background-color: #FFFF33; /* for testing */
+
+	color: #ef8f00;
+	/* Orange, which isn't an ANSI colour
+	and so can't be displayed ordinarily.
+	So if you see it, something's up. */
 }
+
+/****************************************************************
+*
+* http://mozdev.org/bugs/show_bug.cgi?id=3657 has the original
+* list of Bocardo styles.
+*/
+
+.sb { font-weight: bold; }
+.si { font-style: italic; }
+.sm { font-family: monospace; }
+
+.ff { color: #000000; } /* Default foreground is black */
+.fb { color: #FFFFFF; } /* reverse video */
+.f2 { color: #000000; } /* 2 = black */
+.f3 { color: #FF0000; } /* 3 = red */
+.f4 { color: #00FF00; } /* 4 = green */
+.f5 { color: #FFFF00; } /* 5 = yellow */
+.f6 { color: #0000FF; } /* 6 = blue */
+.f7 { color: #FF00FF; } /* 7 = magenta */
+.f8 { color: #00FFFF; } /* 8 = cyan */
+.f9 { color: #FFFFFF; } /* 9 = white */
+
+.bb { background-color: #FFFFFF; } /* Default background is white */
+.bf { background-color: #000000; } /* reverse video */
+.b2 { background-color: #000000; } /* 2 = black */
+.b3 { background-color: #FF0000; } /* 3 = red */
+.b4 { background-color: #00FF00; } /* 4 = green */
+.b5 { background-color: #FFFF00; } /* 5 = yellow */
+.b6 { background-color: #0000FF; } /* 6 = blue */
+.b7 { background-color: #FF00FF; } /* 7 = magenta */
+.b8 { background-color: #00FFFF; } /* 8 = cyan */
+.b9 { background-color: #FFFFFF; } /* 9 = white */
 
 body {
 	font-size: 15px;
