Back in Pennsylvania, and fixing Baroco.
OK. This version is the closest to a working Baroco we've yet had. It looks a lot better, too.
Problems remaining:
1) Bocardo puts gaps between lines on the upper window
2) The colours are broken on the upper window
3) The input box needs replacing
4) Popup boxes, etc., should scroll or vanish when the lower screen scrolls

But this is going better than it has for a while, despite needing numerous hacks to get around bugs in
Mozilla. More fixes soon.

--- a/gnusto.css
+++ b/gnusto.css
@@ -1,8 +1,12 @@
 /* CSS for Gnusto */
 
-div#barbara {
+description.bodytext {
 	font-family: serif;
 	font-size: 12pt;
+	overflow: auto;
+}
+
+scrollbox {
 	overflow: auto;
 }
 
@@ -11,7 +15,7 @@ window {
 	border: 0;
 }
 
-description {
+#bocardo description {
 	font-family: monospace;
 
 	color: #ef8f00;
